--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-spring.datasource.url=jdbc:mysql://localhost/test?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/dollars_bank?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=IhtSQLiaehl,lttft!0
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
